data/all_generated_tests/raw_wast_tests/br_if_EdgeCaseFailuresinbr_table_1919.wast
;; 10. **Test 10: `br_if` with the condition-producing i32 generated from complex arithmetic**    - **Constraint**: The condition for `br_if` derived from complex stack operations.    - **Check**: Confirms branch decision based on the accurate evaluation of the condition.    - **Relation to Edge Cases**: Tests if `br_table` correctly interprets complex conditions leading to jumps, ensuring the stack state is managed accurately before and after the branch.

(assert_invalid
 (module
  (func $complex-arithmetic-br_if
   (block
    (i32.const 10)
    (i32.const 5)
    (i32.mul)
    (i32.const 50)
    (i32.sub)
    (br_if 0)
   )
   (i32.const 1)
   (i32.const 0)
   (i32.add) ; This ensures the stack has one more value than needed
  )
 )
 "type mismatch"
)